samples/_failures_safe/1761511266_92b3a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_44c5d2a7.c: In function ‘main’:
./samples/SAFE/__tmp_44c5d2a7.c:137:5: error: expected declaration or statement at end of input
  137 |     analyze_logs(&analyzer);
      |     ^~~~~~~~~~~~
